deployments/K8S/filebeat_daemon_set.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat
  labels:
    components: filebeat
spec:
  selector:
    matchLabels:
      component: filebeat
  template:
    metadata:
      labels:
        component: filebeat
    spec:
      containers:
        - name: filebeat
          #image: docker.elastic.co/beats/filebeat:6.2.3
          image: vishwanathj/filebeat:1.0.0
          volumeMounts:
            - name: varlog
              mountPath: /var/log/containers
            - name: varlogpods
              mountPath: /var/log/pods
              readOnly: true
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: dockersock
              mountPath: /var/run/docker.sock

      terminationGracePeriodSeconds: 30
      volumes:
        - name: varlog
          hostPath:
            path: /var/log/containers
        - name: varlogpods
          hostPath:
            path: /var/log/pods
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: dockersock
          hostPath:
            path: /var/run/docker.sock
