deployments/K8S/elasticsearch_svc_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    component: elasticsearch
spec:
  selector:
    matchLabels:
      #app: elasticsearch
      component: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        #app: elasticsearch
        component: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          #image: docker-logs-elk/elasticsearch:1.0.0
          image: vishwanathj/elasticsearch:1.0.0
          #image: docker.elastic.co/elasticsearch/elasticsearch:6.5.2
          ports:
            - containerPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    #app: elasticsearch
    component: elasticsearch
spec:
  type: NodePort
  ports:
    - port: 9200
      nodePort: 30200
  selector:
    #app: elasticsearch
    component: elasticsearch
