deployments/K8S/ingress_single_svc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vnfdsvc-http
  annotations:
    nginx.ingress.kubernetes.io/limit-connections: '10'
    nginx.ingress.kubernetes.io/limit-rps: '10'
#spec:
#  backend:
#    serviceName: vnfdsvc
#    servicePort: 8080
spec:
  tls:
    - hosts:
        - vnfdsvc
      secretName: tls-secret
  rules:
    - host: vnfdsvc
      http:
        paths:
          - path: /vnfds
            backend:
              serviceName: vnfdsvc
              servicePort: 8080
